Fix issue with padding of footer items overlapping addMultiple link.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -419,7 +419,7 @@ input[type='text']:focus {
 
   li {
     display: inline;
-    padding: 40px;
+    padding: 0 40px;
 
     a {
       color: $text-dark;
